examples/test/testpolicy12642.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12642
  namespace: namespace386
spec:
  podSelector:
    matchLabels:
      key6: value11
      key30: value49
      key10: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value28
          key48: value33
          key44: value21
